--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "slim/psr7": "^1.1",
         "slim/twig-view": "3.0",
         "php-di/php-di": "^6.2",
-        "doctrine/dbal": "^2.10"
+        "doctrine/dbal": "^2.10",
+        "monolog/monolog": "^2.1"
     },
     "autoload": {
         "psr-4": {
